Tests/dsl/bad/parsing/UnitTestKO002_invalid_php.php
<?php

I do not think that this is valid php...